:art: refactoring to meet the google html/css style guidelines

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MYCV</title>
-  <link rel="icon" type="image/png" href="/images/favicon.png" />
-  <link rel="stylesheet" type="text/css" href="/dist/styles.css"/>
-</head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>MYCV</title>
+<link rel="icon" type="image/png" href="/images/favicon.png" />
+<link rel="stylesheet" href="/dist/styles.css" />
 
-<body>
-  <div id="app"></div>
-  <script src="/dist/bundle.js"></script>
-</body>
-
-</html>
+<div id="app"></div>
+<script src="/dist/bundle.js"></script>
